--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "~=3.1.0"
 psycopg2-binary = "==2.9.1"
 django-crispy-forms = "*"
 django-allauth = "*"
+environs = {extras = ["django"], version = "*"}
 
 [dev-packages]
 
