--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
       - db
     environment:
-      - "DJANGO_SECRET_KEY=r*v&!t+gj4l2yx#k59!e!s4zd=8__tt%qbp)70o_%c+q!8%9+u"
+      - "DJANGO_SECRET_KEY=was removed"
       - "DJANGO_DEBUG=True"
 
 
